--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,17 @@
 plugins {
     id 'java'
-    id 'io.typst.spigradle' version '3.1.2'
     id 'maven-publish'
     id 'signing'
 }
 
 repositories {
     mavenCentral()
-    spigotmc()
-}
-
-dependencies {
-    compileOnly spigot('1.16.5')
-    compileOnly lombok()
-    annotationProcessor lombok()
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-java {
-    toolchain.setLanguageVersion(JavaLanguageVersion.of(11))
-    withSourcesJar()
-    withJavadocJar()
-}
-
-generateSpigotDescription {
-    enabled = false
 }
 
 allprojects {
     group = 'io.typst'
-    version = '1.1.1'
-    def moduleName = it == rootProject ? "core" : name.substring(name.lastIndexOf('-') + 1)
+    version = '2.0.0'
+    def moduleName = name.substring(name.lastIndexOf('-') + 1)
     println(moduleName)
     ext.registerPublish = {
         publishing {
@@ -109,5 +85,3 @@ allprojects {
         }
     }
 }
-
-registerPublish(this)
