--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-rootProject.name = 'bukkit-inventory'
+rootProject.name = 'inventory'
 
-include('kotlin')
+include('core', 'bukkit', 'bukkit-kotlin')
 
 rootProject.children.forEach {
     it.name = "${rootProject.name}-${it.name}"
